Fix spacing

--- a/src/Content/Projects/projects.css
+++ b/src/Content/Projects/projects.css
@@ -1,5 +1,6 @@
 #projectslist {
     text-align: justify;
+    word-spacing:-2px;
     background-color: #535353;
 }
 
